# claude-auto-tee

./: .gitignore  .shellcheckrc  COMPARISON-waves-vs-mece.md  Cargo.toml  DEPENDENCY_ANALYSIS.md  Dockerfile  ESLINT_WARNING_STATUS.md  MANUAL-TESTING.md  QUALITY_SYSTEM.md  README.md  ROADMAP-mece.md  ROADMAP-solo.md  ROADMAP-waves.md  TASKS.md  TASKS_DAG.json  TASKS_WAVES.json  TEST-COVERAGE.md  TROUBLESHOOTING.md  docker-compose.yml  hook.js  install.js  package-lock.json  package.json  plan.md  validate-test-instructions.sh
.claude/: config.yaml  settings.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: BETA-APPLICATION-FORM.md  BETA-FEEDBACK-PROCEDURES.md  BETA-ONBOARDING-GUIDE.md  BETA-RECRUITMENT-STRATEGY.md  BETA-TEST-SCENARIOS.md  BETA-TESTING-INSTRUCTIONS.md  BETA-TESTING.md  CLEANUP-ON-SUCCESS.md  ENVIRONMENT-VARIABLES.md  ERROR-CODES.md  PLATFORM-TEMP-RESEARCH.md  T.A.S.K.S. – Tasks Are Sequenced Key Steps.md  VERBOSE-MODE.md  context-format.md  dependency-model.md  freshness-algorithm.md  graceful-degradation.md  marker-format.md  plan-mece-waves-002.md  plan-mece-waves.md  plan-wave-execution_v001.md  structured-debate.md  unicode-support.md
schemas/: README.md  registry.json  validate-schema.js
scripts/: diagnose.sh  integrity-guard.sh  quality-check.sh
src/: bash_parser.rs  claude-auto-tee.sh  combined_files.txt  disk-space-check.sh  error-codes.sh  graceful-degradation.sh  hook.js  hook_processor.rs  lib.rs  main.rs  path-utils.sh  temp_manager.rs
test/: README.md  demo.js  error-codes-test.sh  graceful-degradation-test.sh  integration-test.sh  test.js  (+22 more)
(+315 files in other folders)
